{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 372,
  "lineage": "21651fcf-95e2-5dc8-7d4d-6e8f0674a008",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0971f6afca696ace6",
            "arn": "arn:aws:ec2:eu-west-2:613208686879:instance/i-097f8caabb5c63b04",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "MySessionManagerRole",
            "id": "i-097f8caabb5c63b04",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0739c3e503f0ec04e",
            "private_dns": "ip-192-168-0-78.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.78",
            "public_dns": "ec2-13-40-37-196.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.37.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01b97ed75f7e06760",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0632cc236da1f088a",
            "tags": {
              "Environmnent": "prod",
              "Managed by": "Terraform",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Environmnent": "prod",
              "Managed by": "Terraform",
              "Owner": "Andrew"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d73fa76ca8f0d26"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.web_instance_security_group",
            "aws_subnet.dmz_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0971f6afca696ace6",
            "arn": "arn:aws:ec2:eu-west-2:613208686879:instance/i-05c0e207f327cc63e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "MySessionManagerRole",
            "id": "i-05c0e207f327cc63e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05d53918342cded30",
            "private_dns": "ip-192-168-0-142.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.0.142",
            "public_dns": "ec2-35-176-244-101.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.176.244.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0062a639ad0bc21d0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f50e4aa06a3b8e8f",
            "tags": {
              "Environmnent": "dev",
              "Managed by": "Terraform",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Environmnent": "dev",
              "Managed by": "Terraform",
              "Owner": "Andrew"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02d73fa76ca8f0d26"
            ]
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.web_instance_security_group",
            "aws_subnet.dmz_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:internet-gateway/igw-04be0d8578c8f0451",
            "id": "igw-04be0d8578c8f0451",
            "owner_id": "613208686879",
            "tags": {
              "Managed by": "Terraform",
              "Name": "MyIGW",
              "Network": "External",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Managed by": "Terraform",
              "Name": "MyIGW",
              "Network": "External",
              "Owner": "Andrew"
            },
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:loadbalancer/app/web-lb/cc479248455a26b2",
            "arn_suffix": "app/web-lb/cc479248455a26b2",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-lb-1574031522.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:loadbalancer/app/web-lb/cc479248455a26b2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d6876f615a05fa65"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0632cc236da1f088a"
              },
              {
                "subnet_id": "subnet-0f50e4aa06a3b8e8f"
              }
            ],
            "subnets": [
              "subnet-0632cc236da1f088a",
              "subnet-0f50e4aa06a3b8e8f"
            ],
            "tags": {
              "Managed by": "Terraform",
              "Name": "WebLB",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Managed by": "Terraform",
              "Name": "WebLB",
              "Owner": "Andrew"
            },
            "vpc_id": "vpc-054d75a0213249751",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.dmz_subnet1",
            "aws_subnet.dmz_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:listener/app/web-lb/cc479248455a26b2/a8bc2d6940783145",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:targetgroup/web-tg/cfb5a1a33c7e43ba",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:listener/app/web-lb/cc479248455a26b2/a8bc2d6940783145",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:loadbalancer/app/web-lb/cc479248455a26b2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_lb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_security_group",
            "aws_subnet.dmz_subnet1",
            "aws_subnet.dmz_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:targetgroup/web-tg/cfb5a1a33c7e43ba",
            "arn_suffix": "targetgroup/web-tg/cfb5a1a33c7e43ba",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:targetgroup/web-tg/cfb5a1a33c7e43ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-2:613208686879:loadbalancer/app/web-lb/cc479248455a26b2"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Managed by": "Terraform",
              "Name": "WebTG",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Managed by": "Terraform",
              "Name": "WebTG",
              "Owner": "Andrew"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_tg_attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:targetgroup/web-tg/cfb5a1a33c7e43ba-20251211155618198500000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:targetgroup/web-tg/cfb5a1a33c7e43ba",
            "target_id": "i-097f8caabb5c63b04"
          },
          "dependencies": [
            "aws_instance.web_server1",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_security_group",
            "aws_security_group.web_instance_security_group",
            "aws_subnet.dmz_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_tg_attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:targetgroup/web-tg/cfb5a1a33c7e43ba-20251211155640117800000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:613208686879:targetgroup/web-tg/cfb5a1a33c7e43ba",
            "target_id": "i-05c0e207f327cc63e"
          },
          "dependencies": [
            "aws_instance.web_server2",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_security_group",
            "aws_security_group.web_instance_security_group",
            "aws_subnet.dmz_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dmz_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:route-table/rtb-0ef55597be8747c7a",
            "id": "rtb-0ef55597be8747c7a",
            "owner_id": "613208686879",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04be0d8578c8f0451",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054d75a0213249751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "int_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:route-table/rtb-029f8f6f3666f088f",
            "id": "rtb-029f8f6f3666f088f",
            "owner_id": "613208686879",
            "propagating_vgws": [],
            "route": [],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054d75a0213249751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz_subnet1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0201d13ac5c6639fc",
            "route_table_id": "rtb-0ef55597be8747c7a",
            "subnet_id": "subnet-0632cc236da1f088a"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.dmz_route_table",
            "aws_subnet.dmz_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dmz_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0164a148d29d6d652",
            "route_table_id": "rtb-0ef55597be8747c7a",
            "subnet_id": "subnet-0f50e4aa06a3b8e8f"
          },
          "dependencies": [
            "aws_internet_gateway.my_igw",
            "aws_route_table.dmz_route_table",
            "aws_subnet.dmz_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "int_subnet2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceea5de03616bc9e",
            "route_table_id": "rtb-029f8f6f3666f088f",
            "subnet_id": "subnet-02124bf0e82d25ec3"
          },
          "dependencies": [
            "aws_route_table.int_route_table",
            "aws_subnet.int_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "int_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d32d7cf5a4e43d2a",
            "route_table_id": "rtb-029f8f6f3666f088f",
            "subnet_id": "subnet-0d35bf358798b45c6"
          },
          "dependencies": [
            "aws_route_table.int_route_table",
            "aws_subnet.int_subnet1",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:security-group/sg-0d6876f615a05fa65",
            "description": "Security group for web application load balancer from home IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6876f615a05fa65",
            "ingress": [
              {
                "cidr_blocks": [
                  "90.200.222.139/32"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "90.200.222.139/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb_security_group",
            "name_prefix": "",
            "owner_id": "613208686879",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054d75a0213249751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "int_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:security-group/sg-0d06f6ebab8b40274",
            "description": "Security group for Internal subnet instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d06f6ebab8b40274",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.64/26",
                  "192.168.0.128/26"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "int_security_group",
            "name_prefix": "",
            "owner_id": "613208686879",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054d75a0213249751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:security-group/sg-0af85b0c174e8aae7",
            "description": "Security group for RDS instance from internal subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af85b0c174e8aae7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d06f6ebab8b40274"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds_security_group",
            "name_prefix": "",
            "owner_id": "613208686879",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054d75a0213249751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.int_security_group",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:security-group/sg-091e9da074ccb6cfc",
            "description": "Security group for SSM VPC endpoint",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-091e9da074ccb6cfc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02d73fa76ca8f0d26",
                  "sg-0d06f6ebab8b40274"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ssm_security_group",
            "name_prefix": "",
            "owner_id": "613208686879",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054d75a0213249751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.int_security_group",
            "aws_security_group.web_instance_security_group",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_instance_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:security-group/sg-02d73fa76ca8f0d26",
            "description": "Security group for web server instances from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02d73fa76ca8f0d26",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6876f615a05fa65"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d6876f615a05fa65"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_instance_security_group",
            "name_prefix": "",
            "owner_id": "613208686879",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-054d75a0213249751"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:subnet/subnet-0632cc236da1f088a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "192.168.0.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0632cc236da1f088a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613208686879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed by": "Terraform",
              "Name": "DMZ1 Subnet",
              "Network": "DMZ1",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Managed by": "Terraform",
              "Name": "DMZ1 Subnet",
              "Network": "DMZ1",
              "Owner": "Andrew"
            },
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dmz_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:subnet/subnet-0f50e4aa06a3b8e8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.0.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f50e4aa06a3b8e8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "613208686879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed by": "Terraform",
              "Name": "DMZ2 Subnet",
              "Network": "DMZ2",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Managed by": "Terraform",
              "Name": "DMZ2 Subnet",
              "Network": "DMZ2",
              "Owner": "Andrew"
            },
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "int_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:subnet/subnet-0d35bf358798b45c6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "192.168.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d35bf358798b45c6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613208686879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed by": "Terraform",
              "Name": "Int Subnet 1",
              "Network": "Internal1",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Managed by": "Terraform",
              "Name": "Int Subnet 1",
              "Network": "Internal1",
              "Owner": "Andrew"
            },
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "int_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:subnet/subnet-02124bf0e82d25ec3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.0.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02124bf0e82d25ec3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "613208686879",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Managed by": "Terraform",
              "Name": "Int Subnet2",
              "Network": "Internal2",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Managed by": "Terraform",
              "Name": "Int Subnet2",
              "Network": "Internal2",
              "Owner": "Andrew"
            },
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:vpc/vpc-054d75a0213249751",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/24",
            "default_network_acl_id": "acl-0ce678d64c02c9d9a",
            "default_route_table_id": "rtb-0c831c4d891b0f713",
            "default_security_group_id": "sg-08c4f96d7d07213bc",
            "dhcp_options_id": "dopt-0d30f8cbda4e3e971",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054d75a0213249751",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c831c4d891b0f713",
            "owner_id": "613208686879",
            "tags": {
              "Managed by": "Terraform",
              "Name": "MyVPC",
              "Network": "Internal,External",
              "Owner": "Andrew"
            },
            "tags_all": {
              "Managed by": "Terraform",
              "Name": "MyVPC",
              "Network": "Internal,External",
              "Owner": "Andrew"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "com.amazonaws.eu-west-2.ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:vpc-endpoint/vpce-04dbefd39d966893b",
            "dns_entry": [
              {
                "dns_name": "vpce-04dbefd39d966893b-dzk1jx1q.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-04dbefd39d966893b-dzk1jx1q-eu-west-2c.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-04dbefd39d966893b-dzk1jx1q-eu-west-2a.ec2messages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ec2messages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z0819634N5P32Z8JQV5I"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04dbefd39d966893b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0563a112c73ff17d8",
              "eni-09c0ac54419c1fb2d"
            ],
            "owner_id": "613208686879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-091e9da074ccb6cfc"
            ],
            "service_name": "com.amazonaws.eu-west-2.ec2messages",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.222",
                "subnet_id": "subnet-02124bf0e82d25ec3"
              },
              {
                "ipv4": "192.168.0.9",
                "subnet_id": "subnet-0d35bf358798b45c6"
              }
            ],
            "subnet_ids": [
              "subnet-02124bf0e82d25ec3",
              "subnet-0d35bf358798b45c6"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.int_security_group",
            "aws_security_group.ssm_security_group",
            "aws_security_group.web_instance_security_group",
            "aws_subnet.int_subnet1",
            "aws_subnet.int_subnet2",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:vpc-endpoint/vpce-0076dfa470a0aeddf",
            "dns_entry": [
              {
                "dns_name": "vpce-0076dfa470a0aeddf-rup84uj4.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0076dfa470a0aeddf-rup84uj4-eu-west-2a.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-0076dfa470a0aeddf-rup84uj4-eu-west-2c.ssm.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssm.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z0820178RMN2TLIZBKOC"
              },
              {
                "dns_name": "ssm.eu-west-2.api.aws",
                "hosted_zone_id": "Z012036669CT029D2XP7"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0076dfa470a0aeddf",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-01c6bb6b6ca829221",
              "eni-0b4f83d10831e1295"
            ],
            "owner_id": "613208686879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-091e9da074ccb6cfc"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssm",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.221",
                "subnet_id": "subnet-02124bf0e82d25ec3"
              },
              {
                "ipv4": "192.168.0.24",
                "subnet_id": "subnet-0d35bf358798b45c6"
              }
            ],
            "subnet_ids": [
              "subnet-02124bf0e82d25ec3",
              "subnet-0d35bf358798b45c6"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.int_security_group",
            "aws_security_group.ssm_security_group",
            "aws_security_group.web_instance_security_group",
            "aws_subnet.int_subnet1",
            "aws_subnet.int_subnet2",
            "aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": "com.amazonaws.eu-west-2.ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:613208686879:vpc-endpoint/vpce-035f342d8a138e3dd",
            "dns_entry": [
              {
                "dns_name": "vpce-035f342d8a138e3dd-1lnl1pnq.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-035f342d8a138e3dd-1lnl1pnq-eu-west-2c.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "vpce-035f342d8a138e3dd-1lnl1pnq-eu-west-2a.ssmmessages.eu-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z7K1066E3PUKB"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.amazonaws.com",
                "hosted_zone_id": "Z06997611YBCE8JMCG3IE"
              },
              {
                "dns_name": "ssmmessages.eu-west-2.api.aws",
                "hosted_zone_id": "Z08196332TD1IPAHO0OVY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-035f342d8a138e3dd",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00dfbbc30ac2064ad",
              "eni-09f47f523bf34a1b4"
            ],
            "owner_id": "613208686879",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-091e9da074ccb6cfc"
            ],
            "service_name": "com.amazonaws.eu-west-2.ssmmessages",
            "service_region": "eu-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "192.168.0.240",
                "subnet_id": "subnet-02124bf0e82d25ec3"
              },
              {
                "ipv4": "192.168.0.44",
                "subnet_id": "subnet-0d35bf358798b45c6"
              }
            ],
            "subnet_ids": [
              "subnet-02124bf0e82d25ec3",
              "subnet-0d35bf358798b45c6"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-054d75a0213249751"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.int_security_group",
            "aws_security_group.ssm_security_group",
            "aws_security_group.web_instance_security_group",
            "aws_subnet.int_subnet1",
            "aws_subnet.int_subnet2",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}